--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,6 @@
 }
 
 .quiz-container {
-    background: lavender;
     margin: 10rem;
     border: 10rem;
 
@@ -49,12 +48,16 @@
 }
 
 .allchoices-container {
-    background: lightcoral;
-    display: flex;
+    background: lightpink;
     margin: 2rem 2rem;
+    padding: 10px 15px;
+    border: 2px solid darkblue;
+    border-radius: 2rem;
+    font-size: 20px;
 }
 
 .choice-container {
+    
     border: 2px solid darkblue;
     border-radius: 2rem;
     margin: 2rem;
@@ -62,11 +65,14 @@
     font-size: 24px;
 }
 
-.choice-list {
-    background: lavender;
-    font-size: 20px;
-    margin: 20px 20px;
-    padding: 20px;
-    border: 2px solid darkblue;
-    border-radius: 2rem;
+.choice-text {
+    width: 100%;
+}
+
+.correct {
+    background: green;
+}
+
+.wrong {
+    background: red;
 }
